@@ -15,6 +15,6 @@ Encoding: UTF-8
 Depends: R (>= 3.2.0)
 Imports: Rcpp (>= 0.12.9), RApiDatetime
 LinkingTo: Rcpp (>= 0.12.9), BH, RApiDatetime
-Suggests: gettz, knitr, rmarkdown, pinp
+Suggests: tinytest, gettz, knitr, rmarkdown, pinp
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
